syntax = "proto3";

option go_package = ".;gen";

import "google/api/annotations.proto";

message Account {
    string id = 1;
    string ownerID = 2;
    double balance = 3;
    string type = 4;
    double credit_limit = 5;
}

message Transaction {
    string id = 1;
    string recipientID = 2;
    string senderID = 3;
    double amountSent = 4;
    string senderAccountID = 5;
    string recipientAccountID = 6;
}

message GetAccountRequest {
    string id = 1;
}

message CreateAccountRequest {
    string user_id = 2;
}

message CreateAccountResponse {
    string id = 1;
}

service AccountService {
    rpc GetAccount (GetAccountRequest) returns (Account) {
        option (google.api.http) = {
            get: "/v1/accounts/{id}"
        };
    }

    rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {
        option (google.api.http) = {
            post: "/v1/accounts"
            body: "*"
        };
    }
}